syntax = "proto3";

package helloworld;

option java_multiple_files = true;
option java_package = "org.bismark.grpc";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string city = 2;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}